--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "url": "https://github.com/ishanyang/pagingdata/issues"
   },
   "author": "ishanyang",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^5.0.0"
+  }
 }
